--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -107,19 +107,19 @@
                                 </form>
                             </div>
                         </li>
-                        <!-- Nav Item - Alerts -->
+                        <!-- Nav Item - Notifications -->
                         <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="notificationDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-bell fa-fw"></i>
-                                <!-- Counter - Alerts -->
+                                <!-- Counter - Notifications -->
                                 <span class="badge badge-danger badge-counter"></span>
                             </a>
-                            <!-- Dropdown - Alerts -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
+                            <!-- Dropdown - Notifications -->
+                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="notificationDropdown">
                                 <h6 class="dropdown-header">
-                                    Alerts Center
+                                    Notification Center
                                 </h6>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">No Alerts</a>
+                                <a class="dropdown-item text-center small text-gray-500" href="#">No Notifications</a>
                             </div>
                         </li>
                         <div class="topbar-divider d-none d-sm-block"></div>
