Change priority icon.

--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -88,7 +88,8 @@
 					</div>
 					<div class="col-auto">
 						<div id="PriorityIcon" class="icon icon-shape bg-{{ priority_colour }} text-white rounded-circle shadow">
-							<i class="fas fa-car-crash fa-1fourx"></i>
+							<!-- TODO Add different types of incidents. -->
+							<i class="fas fa-exclamation fa-1fourx"></i>
 						</div>
 					</div>
 				</div>
