--- a/app/static/css/temp.css
+++ b/app/static/css/temp.css
@@ -90,3 +90,146 @@ tr:hover {
     text-shadow: 0px 0px 1px black, 0px 0px 1px black;
     color: white;
 }
+
+/*!
+Copyright (c) 2019 by LEON (https://codepen.io/cppleon/pen/akwdWv)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+
+MODIFIED VERSION
+*/
+
+.activity {
+  padding-left: 40px;
+  list-style: none;
+  position: relative;
+}
+.activity .media {
+  padding: 20px;
+  background-color: #fff;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.025);
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.025);
+}
+.activity .media-object {
+  width: 36px;
+  height: 36px;
+  margin-right: 10px;
+}
+.activity .media-body {
+  position: absolute;
+  top: 0;
+  right: -10px;
+  padding: 5px 10px;
+  font-size: 10px;
+  color: #fff;
+  background-color: #6a8ef5;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+}
+
+.activity .media span{
+    margin-top: 6px;
+}
+.activity .media-body p:last-child {
+  margin-bottom: 0;
+}
+.activity > li {
+  position: relative;
+}
+
+.activity > li > div .media::before {
+  content: '';
+  position: absolute;
+  top: 43px;
+  left: -25px;
+  width: 12px;
+  height: 12px;
+  background-color: #f5f5f5;
+  border: 2px solid #6a8ef5;
+  z-index: 1;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-transition-property: top, left, width, height, border-color;
+  transition-property: top, left, width, height, border-color;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
+.activity > li > div + div .media::before {
+  border-color: #4caf50;
+}
+.activity > li > div .media:hover::before,
+.activity > li > div + div .media:hover::before {
+  border-color: #4e73df;
+}
+.activity > li:not(:last-child) > div:before, .activity > li:last-child > div:not(:last-child)::before {
+  content: '';
+  position: absolute;
+  top: 53px;
+  left: -20px;
+  height: 100%;
+  border: 1px solid #e8e8e8;
+}
+.activity > li:not(:last-child) > div:not(:last-child):before, .activity > li:last-child > div:not(:last-child)::before {
+  border-style: dashed;
+}
+.activity > li > div {
+  margin-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
+}
+.activity > li > div::after {
+  content: '';
+  position: absolute;
+  top: 43px;
+  left: -6px;
+  border-style: solid;
+  border-width: 6px 6px 6px 0;
+  border-color: transparent #fff transparent transparent;
+}
+.activity > li > div:hover .media-body {
+  background-color: #4e73df;
+}
+
+.activity > li > div:hover i::before{
+ color: #4e73df !important;
+}
+
+.activity-icon {
+    position: absolute;
+    left: -61px;
+    top: 37px;
+}
+
+@media (max-width: 767px) {
+  .activity {
+    padding-left: 30px;
+  }
+  .activity > li::before {
+    margin-right: auto;
+    -webkit-transform: rotate(-90deg) translate(50%, -20px);
+    transform: rotate(-90deg) translate(50%, -20px);
+    -webkit-transform-origin: right;
+    transform-origin: right;
+  }
+}
+
+.mt-2.dropdown-toggle::after {
+    margin-top: 16px;
+    margin-right: 8px;
+}
+
+.form-check-label.text-muted {
+    float: left;
+    margin-left: -20px;
+    margin-right: 30px;
+}
