--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -172,7 +172,7 @@
 			<div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
 				<h6 class="m-0 font-weight-bold text-primary">Recent Activity</h6>
 			</div>
-			<div class="card-body" style="background-color: #f8f9fc;">
+			<div class="card-body bg-light">
 				<ul class="activity">
 					{% for action in incident.actions|sort(attribute='occurred_at', reverse=True) %}
 					<li>
@@ -219,16 +219,14 @@
 		<div class="card shadow mb-4">
 			<div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
 				<h6 class="m-0 font-weight-bold text-primary">Map</h6>
-				<div class="form-check">
-				  <input class="form-check-input" type="checkbox" value="" id="publicCheck">
-				  <label class="form-check-label text-muted" for="publicCheck">
-					Public
-				  </label>
+				<div class="custom-switch" data-toggle="tooltip" title="Toggle public visibility">
+					<input type="checkbox" class="custom-control-input" id="customSwitch1">
+					<label class="custom-control-label" for="customSwitch1"></label>
 				</div>
-
 			</div>
 			<div class="card-body">
-
+				<div id="map" class="map-container">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -513,5 +511,18 @@
 	});
 	});
 </script>
+<script>
+// Initialize and add the map
+function initMap() {
+  // The location of Uluru
+  var uluru = {lat: 55.872326, lng: -4.288094};
+  // The map, centered at Uluru
+  var map = new google.maps.Map(
+      document.getElementById('map'), {zoom: 15, center: uluru});
+  // The marker, positioned at Uluru
+  var marker = new google.maps.Marker({position: uluru, map: map});
+}
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ config['GOOGLE_MAPS_API_KEY'] }}&callback=initMap"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
 {% endblock %}
