Added more action log strings.

--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -187,7 +187,7 @@
 								<div class="media-body">
 									{{ moment(action.occurred_at).fromNow(refresh=True) }}
 								</div>
-								<span class="card-text"><a href="#">{{ action.user }}</a> {{ action }}.</span>
+								<span class="card-text"><a href="#">{{ action.user }}</a> {{ action }}</span>
 							</div>
 						</div>
                 	</li>
