--- a/app/static/css/temp.css
+++ b/app/static/css/temp.css
@@ -117,14 +117,16 @@ MODIFIED VERSION
   -webkit-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.025);
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.025);
 }
-.activity .media-object {
+.media-object {
   width: 36px;
   height: 36px;
   margin-right: 10px;
 }
-.activity .media-body {
+
+.update-body,
+.media-body {
   position: absolute;
-  top: 0;
+  top: 0px;
   right: -10px;
   padding: 5px 10px;
   font-size: 10px;
@@ -134,6 +136,10 @@ MODIFIED VERSION
   border-radius: 3px;
   -webkit-transition: background-color 0.2s;
   transition: background-color 0.2s;
+}
+
+.update-body {
+    top:-12px !important;
 }
 
 .activity .media span{
@@ -170,6 +176,7 @@ MODIFIED VERSION
 .activity > li > div + div .media:hover::before {
   border-color: #4e73df;
 }
+
 .activity > li:not(:last-child) > div:before, .activity > li:last-child > div:not(:last-child)::before {
   content: '';
   position: absolute;
@@ -196,6 +203,8 @@ MODIFIED VERSION
   border-width: 6px 6px 6px 0;
   border-color: transparent #fff transparent transparent;
 }
+
+.update-log-text:hover .update-body,
 .activity > li > div:hover .media-body {
   background-color: #4e73df;
 }
@@ -241,6 +250,7 @@ MODIFIED VERSION
     height: 300px;
     box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
 }
+
 .map-container iframe{
     left: 0;
     top: 0;
@@ -248,4 +258,53 @@ MODIFIED VERSION
     height: 100%;
     width: 100%;
     position: absolute;
+}
+
+li.update-log,
+li.message-right {
+  position: relative;
+  display: flow-root list-item;
+  margin-bottom: 20px;
+}
+
+.update-log-avatar {
+  width: 40px;
+}
+
+li.update-log > .update-log-avatar {
+  float: left;
+}
+
+.update-log-name {
+  font-size: 0.6em;
+  text-align: center;
+}
+
+.update-log-text {
+  max-width: calc(100% - 60px);
+  padding: 12px;
+  border-radius: 4px;
+  background-color: #fff;
+  color: #263959;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.025);
+}
+
+li.update-log > .update-log-text {
+  text-align: left;
+  left: 16px;
+  margin-left: 60px;
+}
+
+.update-log-text:before {
+  content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+    top: 13px;
+	border: 8px solid;
+}
+
+li.update-log > .update-log-text:before {
+  left: 44px;
+  border-color: transparent #fff transparent transparent;
 }
