--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -27,9 +27,9 @@
 						</div>
 					</div>
 				</div>
-				<p class="mt-3 mb-0 text-muted text-sm">
-					<span class="text-{{ incidents_percentage[0] }} mr-2"><i class="fa fa-{{ incidents_percentage[1] }}"></i> {{ incidents_percentage[2] }}%</span>
-					<span class="text-nowrap">Since last hour</span>
+				<p class="mt-3 mb-0 text-muted">
+					<span class="text-{{ incidents_stat[0] }} mr-2"><i class="fa {% if incidents_stat[1] %}fa-{{ incidents_stat[1] }}{% endif %}"></i> {{ incidents_stat[2] }}</span>
+					<span class="text-nowrap">since last hour</span>
 				</p>
 			</div>
 		</div>
@@ -48,9 +48,9 @@
 						</div>
 					</div>
 				</div>
-				<p class="mt-3 mb-0 text-muted text-sm">
+				<p class="mt-3 mb-0 text-muted">
 					<span class="text-danger mr-2"><i class="fa fa-arrow-down"></i> 3.48%</span>
-					<span class="text-nowrap">Since last hour</span>
+					<span class="text-nowrap">since last hour</span>
 				</p>
 			</div>
 		</div>
@@ -69,6 +69,9 @@
 						</div>
 					</div>
 				</div>
+				<p class="mt-3 mb-0 text-muted text-s">
+					<span class="text-nowrap">Created {{ moment(deployment.created_at).format('Do MMMM YYYY, h:mma') }}</span>
+				</p>
 			</div>
 		</div>
 	</div>
