--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -60,6 +60,7 @@
 			<div class="card-body">
 				<div class="row no-gutters align-items-center">
 					<div class="col mr-2">
+						<!-- TODO Add closed deployment logic -->
 						<div class="text-s font-weight-bold text-success text-uppercase mb-1">Active For</div>
 						<div class="h5 clock mb-0 font-weight-bold text-gray-800"></div>
 					</div>
