Increase amount of incidents shown per page.

--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -263,6 +263,7 @@
 	// Call the dataTables jQuery plugin
 	$(document).ready(function() {
 	    $('#dataTable').DataTable({
+	      	"pageLength": 25,
 	        "columnDefs": [
 	            {   "targets": [ 0 ],
 	                "orderable": false,
